# ai-sample-code

DeepSeek-OCR/: main.py  pyproject.toml  requirements.txt
DeepSeek-OCR/your/output/dir/: result.mmd
Qwen3-4B-Instruct-2507/: main.py  pyproject.toml
