[project]
name = "deepseek-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "automodel (>=0.5.9,<0.6.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "addict (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "einops (>=0.8.2,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
