[project]
name = "deepseek-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "torch (==2.6.0)",
    "transformers (==4.46.3)",
    "tokenizers (==0.20.3)",
    "einops (>=0.8.2,<0.9.0)",
    "addict (>=2.4.0,<3.0.0)",
    "easydict (>=1.13,<2.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "torchvision (==0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu118"}
torchvision = {source = "pytorch-cu118"}
